--- a/map.html
+++ b/map.html
@@ -741,7 +741,7 @@
             northEast = new L.LatLng(90, 180),
             maxExtent = new L.LatLngBounds(southWest, northEast);
 
-			var streets = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {attribution: '&copy; <a href="http://openstreetmap.org/copyright">OpenStreetMap</a>',
+			var streets = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {attribution: '(c) <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
 					maxZoom: 18,
 					minZoom: 4,
 					format: 'image/png',
