--- a/map.html
+++ b/map.html
@@ -254,7 +254,7 @@
 				top: -6px
 			}
 	
-			.gg-arrow-up {
+			.gg-arrow-down {
 				color: gray;
 				box-sizing: border-box;
 				position: relative;
@@ -263,23 +263,23 @@
 				width: 22px;
 				height: 22px
 			}
-			.gg-arrow-up::after,
-			.gg-arrow-up::before {
+			.gg-arrow-down::after,
+			.gg-arrow-down::before {
 				content: "";
 				display: block;
 				box-sizing: border-box;
 				position: absolute;
-				top: 4px
+				bottom: 4px
 			}
-			.gg-arrow-up::after {
+			.gg-arrow-down::after {
 				width: 8px;
 				height: 8px;
-				border-top: 2px solid;
+				border-bottom: 2px solid;
 				border-left: 2px solid;
-				transform: rotate(45deg);
+				transform: rotate(-45deg);
 				left: 7px
 			}
-			.gg-arrow-up::before {
+			.gg-arrow-down::before {
 				width: 2px;
 				height: 16px;
 				left: 10px;
@@ -298,7 +298,7 @@
 				font-size: 9px;
 			}
 
-			i.gg-arrow-up {
+			i.gg-arrow-down {
 				/* text-align: center; */
 				position: relative;
 				left: 1px;
@@ -741,7 +741,7 @@
             northEast = new L.LatLng(90, 180),
             maxExtent = new L.LatLngBounds(southWest, northEast);
 
-			var streets = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {attribution: '(c) <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+			var streets = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {attribution: '&copy; <a href="http://openstreetmap.org/copyright">OpenStreetMap</a>',
 					maxZoom: 18,
 					minZoom: 4,
 					format: 'image/png',
@@ -977,7 +977,7 @@
 				states:[{                 // specify different icons and responses for your button
 					stateName: 'get-center',
 					title: '',
-					icon: '<i id="arrow"; class="gg-arrow-up"></i>'+'<span class="backButton">3kts</span><br>',
+					icon: '<i id="arrow"; class="gg-arrow-down"></i>'+'<span class="backButton">3kts</span><br>',
 					
 				}]
 				}).addTo(map);
